# xLSTM-MIL

./: .gitignore  NOTEBOOK_SPLIT.md  README.md  file6_final.ipynb  pyproject.toml  requirements.txt
scripts/: train.py
xlstm_mil/: __init__.py  config.py  env.py
xlstm_mil/benchmark/: __init__.py  memory.py
xlstm_mil/data/: __init__.py  dataset.py  download.py
xlstm_mil/eval/: __init__.py  metrics.py  plots.py
xlstm_mil/model/: __init__.py  pfmxlstmmil.py  xlstmmil.py
xlstm_mil/training/: __init__.py  fit.py  subsample.py
