[project]
name = "xlstm-mil"
version = "0.1.0"
description = "xLSTM-MIL training pipeline for WSI MIL (CAMELYON16-style features)"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "h5py>=3.8",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "hilbertsfc>=1.6",
  "huggingface_hub>=0.20",
  "timm>=0.9",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["xlstm_mil*"]
